force-app/main/default/objects/Contact/fields/City_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>City_of_Residence__c</fullName>
    <label>City of Residence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>