force-app/main/default/objects/Contact/fields/ConsentGiven__c.field-meta.xml
<CustomField>
    <fullName>ConsentGiven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Given</label>
    <type>Checkbox</type>
</CustomField>