force-app/main/default/objects/Contact/fields/ConsentTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ConsentTimestamp__c</fullName>
    <label>Consent Timestamp</label>
    <type>DateTime</type>
</CustomField>