force-app/main/default/objects/Contact/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>