force-app/main/default/objects/Contact/fields/Fee_Structure_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structure_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Structure Acknowledged</label>
    <type>Checkbox</type>
</CustomField>