force-app/main/default/objects/Contact/fields/High_School__c.field-meta.xml
<CustomField>
    <fullName>High_School__c</fullName>
    <label>High School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>