force-app/main/default/objects/Contact/fields/High_School_City__c.field-meta.xml
<CustomField>
    <fullName>High_School_City__c</fullName>
    <label>What city is your high school in?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>