force-app/main/default/objects/Contact/fields/High_School_Country__c.field-meta.xml
<CustomField>
    <fullName>High_School_Country__c</fullName>
    <label>High School Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>