force-app/main/default/objects/Contact/fields/IntegrationLastSync__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLastSync__c</fullName>
    <label>Integration Last Sync</label>
    <type>DateTime</type>
</CustomField>