force-app/main/default/objects/Contact/fields/Is_WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_WhatsApp_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this your WhatsApp number?</label>
    <type>Checkbox</type>
</CustomField>