force-app/main/default/objects/Contact/fields/Opt_In_ALU_News__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_ALU_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt In ALU News</label>
    <type>Checkbox</type>
</CustomField>