force-app/main/default/objects/Contact/fields/Opt_Out_ALU_News__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_ALU_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out ALU News</label>
    <type>Checkbox</type>
</CustomField>