force-app/main/default/objects/Contact/fields/Preferred_Intake__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Intake__c</fullName>
    <label>Preferred Intake</label>
    <length>255</length>
    <type>Text</type>
</CustomField>