force-app/main/default/objects/Contact/fields/Preferred_Program__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Program__c</fullName>
    <label>Preferred Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSc (Hons) Entrepreneurship Leadership</fullName>
            </value>
            <value>
                <fullName>BSc (Hons) International Business and Trade</fullName>
            </value>
            <value>
                <fullName>BSc (Hons) Software Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>