force-app/main/default/objects/Contact/fields/Privacy_Policy_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Policy Agreed</label>
    <type>Checkbox</type>
</CustomField>